# personal-tools

./: CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-04-06-ctx-company-switcher.md
docs/superpowers/specs/: 2026-04-06-aliases-completions-design.md  2026-04-06-ctx-company-switcher-design.md
examples/: plugin_example.py
skills/ansible/: SKILL.md
skills/consul/: SKILL.md
skills/docker/: SKILL.md
skills/favro/: SKILL.md
skills/github/: SKILL.md
skills/gitlab/: SKILL.md
skills/helm/: SKILL.md
skills/jira/: SKILL.md
skills/kubernetes/: SKILL.md
skills/nomad/: SKILL.md
skills/terraform/: SKILL.md
skills/vault/: SKILL.md
src/ctx/: cli.py  common.py  config.py  secrets.py  shell.py  skills.py  state.py
src/hat/: activity_log.py  backup.py  cli.py  cli_config.py  cli_inspect.py  cli_net.py  cli_repos.py  cli_secret.py  cli_ssh.py  cli_tools.py  cli_vpn.py  cli_whatsup.py  common.py  config.py  doctor.py  env_builder.py  kubeconfig.py  migrate.py  monitor.py  net.py  notify.py  output.py  plugins.py  repos.py  secret_registry.py  secrets.py  shell.py  state.py  transfer.py  tui.py  tunnel.py  utils.py  validate.py  watch.py
templates/: projects-claude.md
tests/: test_activity_log.py  test_backup.py  test_cli.py  test_cli_full.py  test_common.py  test_config.py  test_config_commands.py  test_doctor.py  test_env_builder.py  test_integration.py  test_kubeconfig.py  test_migrate.py  test_module_apps.py  test_module_browser.py  test_module_cloud.py  test_module_dns.py  test_module_docker.py  test_module_env.py  test_module_git.py  test_module_proxy.py  test_module_ssh.py  test_module_tools.py  test_module_vpn.py  test_modules_base.py  test_net.py  test_notify.py  test_repos.py  test_secrets.py  test_shell.py  test_skills.py  test_skills_content.py  test_ssh_hosts.py  test_state.py  test_tags.py  test_template.py  test_tunnel.py  test_validate.py
(+17 files in other folders)
